--- a/week-1/css/base.css
+++ b/week-1/css/base.css
@@ -12,12 +12,14 @@ body {
 
 header {
   height: 60px;
+  width: 100%;
   padding: 0 30px;
   background-color: #ece9e9;
 }
 
 header h2 {
   margin: 0;
+  padding: 30px;
 }
 
 .nav-icon img{
@@ -46,12 +48,18 @@ nav a{
 }
 
 .container {
-  margin: 20px;
+  margin: 10px;
 }
 
 main {
   padding: 0 20px;
   width: 100%;
+}
+
+main h2 {
+  width: 100%;
+  height: 60px;
+  margin-bottom: auto;
 }
 
 .content-box {
@@ -70,6 +78,8 @@ main {
 .button {
   width: 200px;
   height: 50px;
-  margin: 50px;
+  margin-top: 30px;
   background-color: #bcd5ec;
+  align-items: center;
+  position: relative;
 }
