--- a/week-1/css/flexbox.css
+++ b/week-1/css/flexbox.css
@@ -46,7 +46,8 @@ main {
   Media Queries
 ==================================== */
 
-@media only screen and (min-device-width: 500px) and (min-width: 500px) {
+/* @media only screen and (min-device-width: 500px) */
+@media only screen and (min-width: 500px) {
 
   .container {
     display: flex;
@@ -61,7 +62,8 @@ main {
   }
 }
 
-@media only screen and (min-device-width: 800px) and (min-width: 800px)  {
+/* @media only screen and (min-device-width: 800px)  */
+@media only screen and (min-width: 800px) {
 
   .nav-icon {
     display: none;
@@ -74,7 +76,8 @@ main {
   
 }
 
-@media only screen and (min-device-width: 1200px) and (min-width: 1200px)  {
+/* @media only screen and (min-device-width: 1200px) */
+@media only screen and (min-width: 1200px) {
 
   main {
     align-items: center;
